--- a/src/sample/view/userTakeTransit.fxml
+++ b/src/sample/view/userTakeTransit.fxml
@@ -1,15 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 
+<?import javafx.collections.FXCollections?>
+<?import java.lang.String?>
 <AnchorPane prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.controller.UserTakeTransit">
    <children>
-      <TableView fx:id="transitTable" editable="true" layoutX="70.0" layoutY="115.0" prefWidth="661.0">
+      <TableView fx:id="transitTable" editable="true" layoutX="70.0" layoutY="129.0" prefHeight="373.0" prefWidth="661.0">
         <columns>
           <TableColumn fx:id="routeCol" prefWidth="75.0" text="Route" />
           <TableColumn fx:id="typeCol" prefWidth="146.0" text="Transport Type" />
@@ -17,8 +20,26 @@
             <TableColumn fx:id="connectedCol" prefWidth="146.0" text="Connected Sites" />
         </columns>
       </TableView>
-      <Label layoutX="49.0" layoutY="26.0" text="Transport Type" />
-      <TextField fx:id="transportTypeInput" layoutX="219.0" layoutY="34.0" />
-      <Button layoutX="523.0" layoutY="40.0" mnemonicParsing="false" onAction="#testing" text="Button" />
+      <Label layoutX="70.0" layoutY="38.0" text="Contain Site" />
+      <Button layoutX="586.0" layoutY="79.0" mnemonicParsing="false" onAction="#filter" prefHeight="33.0" prefWidth="54.0" text="Filter" />
+      <ChoiceBox fx:id="siteOptions" layoutX="166.0" layoutY="34.0" prefWidth="150.0" >
+
+      </ChoiceBox>
+      <TextField fx:id="lowPrice" layoutX="167.0" layoutY="83.0" prefHeight="25.0" prefWidth="39.0" />
+      <Label layoutX="70.0" layoutY="87.0" prefHeight="17.0" prefWidth="80.0" text="Price Range" />
+      <Label layoutX="213.0" layoutY="87.0" text="--" />
+      <TextField fx:id="highPrice" layoutX="228.0" layoutY="83.0" prefHeight="25.0" prefWidth="39.0" />
+      <Label layoutX="452.0" layoutY="38.0" text="Transport Type" />
+      <ChoiceBox fx:id="transportOptions" layoutX="548.0" layoutY="34.0" prefWidth="150.0">
+          <items>
+              <FXCollections fx:factory="observableArrayList">
+                  <String fx:value="MARTA" />
+                  <String fx:value="Bus" />
+                  <String fx:value="Bike" />
+              </FXCollections>
+          </items>
+      </ChoiceBox>
+      <Button fx:id="goBack" layoutX="296.0" layoutY="547.0" mnemonicParsing="false" text="Back" />
+      <Button fx:id="logTransit" layoutX="452.0" layoutY="547.0" mnemonicParsing="false" text="Log Transit" />
    </children>
 </AnchorPane>
