--- a/src/sample/view/visitorVisitHistory.fxml
+++ b/src/sample/view/visitorVisitHistory.fxml
@@ -9,10 +9,9 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-
 <AnchorPane prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.controller.VisitorVisitHistory">
    <children>
-      <Label layoutX="332.0" layoutY="44.0" text="Vist History">
+      <Label layoutX="332.0" layoutY="44.0" text="Visit History">
          <font>
             <Font size="27.0" />
          </font>
